--- a/client.html
+++ b/client.html
@@ -1,9 +1,80 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <form method="POST" action="http://127.0.0.1:3000/send">
-        <input type="text" name="message" />
-        <input type="submit" value="Send message"></input>
-    </form>
+    <h1>Chat</h1>
+    <div id="chat-app">
+        <div v-if="authenticated">
+            <div id="chat-messages">
+                <div v-for="message in messages" :key="message.id">
+                    <strong>{{ message.username }}</strong><em>{{ new Date(message.date) }}</em><br />
+                    <p>{{ message.message }}</p>
+                </div>
+            </div>
+            <div id="chat-controls">
+                <form id="chat-form">
+                    <input v-model="currentMessage" type="text"></input>
+                    <button @click="sendMessage">Send</button>
+                </form>
+            </div>
+        </div>
+        <div v-else>
+            <p>Welcome to chat. Please enter a username to continue.</p>
+            <form id="set-username-form">
+                <input v-model="username" type="text"></input>
+                <button @click="login">Login</input>
+            </form>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+    <script>
+        const serverUrl = 'http://127.0.0.1:3000';
+        const app = new Vue({
+            el: '#chat-app',
+            data: {
+                authenticated: false,
+                username: '',
+                currentMessage: '',
+                messages: []
+            },
+            methods: {
+                async fetchMessage() {
+                    const res = await fetch (`${serverUrl}/listen`);
+                    return res.json();
+                },
+                async messageLongPoll() {
+                    const message = await this.fetchMessage();
+
+                    this.messages.push(message);
+                    this.messageLongPoll();
+                },
+                login(e) {
+                    e.preventDefault();
+
+                    if (this.username !== '') {
+                        this.authenticated = true;
+
+                        this.messageLongPoll();
+                    }
+                },
+                sendMessage(e) {
+                    e.preventDefault();
+
+                    if (this.currentMessage !== '') {
+                        let data = new URLSearchParams();
+                        data.append('username', this.username);
+                        data.append('message', this.currentMessage);
+
+                        fetch(`${serverUrl}/send`, {
+                            method: 'POST',
+                            body: data
+                        }).then((data) => {
+                            this.currentMessage = '';
+                        });
+                    }
+                }
+            }
+        });
+    </script>
 </body>
 </html>
